<resources>
    <string name="app_name">LIYA</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nouvelle_partie">Nouvelle partie</string>
    <string name="continuer">Continuer</string>
    <string name="quitter">Quitter</string>
    <string name="choix_de_aventure">Choix de l\'aventure</string>
    <string name="physique">Physique :</string>
    <string name="mental">Mental :</string>
    <string name="social">Social :</string>
    <string name="choisir_une_action">Choisir une action</string>
    <string name="heros">Heros :</string>
    <string name="aventure_a_continuer">Aventure à continuer</string>
    <string name="menu">Menu</string>
    <string name="fin_aventure">Aventure terminée !</string>
    <string name="boutique">Boutique</string>
</resources>
